# authsystem

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
authentication/: models.py  otp.py  ratelimit.py  send_email.py  serializers.py  template.py  urls.py  views.py
authentication/html/: otp.html  reset_password.html  verify_email.html
authentication/migrations/: 0001_initial.py  0002_alter_users_email_alter_users_id.py  0003_emailverify_alter_users_is_active.py  0004_passwordreset.py  0005_delete_passwordreset.py  0006_resetemailverify.py
authsystem/: settings.py  urls.py
src/: App.tsx  main.tsx
src/hooks/: useEmailVerify.tsx  useLogin.tsx  useRegister.tsx  useResetPassword.tsx
src/pages/: Login.tsx  Register.tsx  ResetPassword.tsx
src/pages/error/: 404.tsx
src/routes/: authRoutes.tsx
src/styles/: _auth.scss  login.scss  register.scss  resetpassword.scss
src/types/: auth.types.ts  login.types.ts
